--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "advanced-react-patterns-v2",
   "version": "1.0.0",
-  "description": "The updated version of my advanced react component patterns course",
+  "description": "Testing Nested",
   "keywords": [],
   "homepage": "http://advanced-react-patterns.netlify.com/",
   "main": "src/index.js",
   "dependencies": {
+    "axios": "^0.27.2",
     "hoist-non-react-statics": "^2.5.5",
     "jest-dom": "^1.5.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-loadable": "^5.4.0",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^6.3.0",
     "react-testing-library": "^4.1.2",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "use-query-params": "^1.2.3"
   },
   "devDependencies": {
     "all-contributors-cli": "^5.2.1",
@@ -24,7 +26,7 @@
     "is-ci": "^1.1.0",
     "node": "^8.11.1",
     "npm-run-all": "^4.1.3",
-    "react-scripts": "2.1.8",
+    "react-scripts": "4.5.0",
     "replace-in-file": "^3.4.0"
   },
   "scripts": {
