--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
-  "printWidth": 70,
+  "printWidth": 80,
   "tabWidth": 2,
   "useTabs": false,
   "semi": false,
   "singleQuote": true,
   "trailingComma": "all",
-  "bracketSpacing": false,
+  "bracketSpacing": true,
   "jsxBracketSameLine": false
 }
