--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
   "homepage": "http://advanced-react-patterns.netlify.com/",
   "main": "src/index.js",
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.1",
     "axios": "^0.27.2",
+    "clsx": "^1.2.1",
+    "formik": "^2.2.9",
     "hoist-non-react-statics": "^2.5.5",
     "jest-dom": "^1.5.2",
+    "notistack": "^2.0.5",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-loadable": "^5.4.0",
@@ -16,7 +23,8 @@
     "react-router-dom": "^6.3.0",
     "react-testing-library": "^4.1.2",
     "redux": "^4.0.0",
-    "use-query-params": "^1.2.3"
+    "use-query-params": "^1.2.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "all-contributors-cli": "^5.2.1",
