--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "advanced-react-patterns-v2",
-  "version": "1.0.0",
-  "description": "Testing Nested",
+  "name": "Lucivia dashboard",
+  "version": "0.2.0",
+  "description": "Wraps core-app with multi-user and project context",
   "keywords": [],
-  "homepage": "http://advanced-react-patterns.netlify.com/",
   "main": "src/index.js",
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -29,7 +28,6 @@
   "devDependencies": {
     "all-contributors-cli": "^5.2.1",
     "cross-spawn": "^6.0.5",
-    "husky": "^0.14.3",
     "inquirer": "^6.0.0",
     "is-ci": "^1.1.0",
     "node": "^8.11.1",
@@ -42,16 +40,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "test:coverage": "npm run test -- --coverage",
-    "contributors:add": "all-contributors add",
-    "contributors:generate": "all-contributors generate",
     "setup": "node ./scripts/verify && node ./scripts/install && npm run validate && node ./scripts/autofill-feedback-email.js",
-    "validate": "npm-run-all --parallel build test:coverage",
-    "precommit": "npm run validate"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/exercises-final/**/*.js"
-    ]
+    "validate": "npm-run-all --parallel build test:coverage"
   },
   "eslintConfig": {
     "extends": "react-app"
