--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Lucivia dashboard",
+  "name": "luci-dashboard",
   "version": "0.2.0",
   "description": "Wraps core-app with multi-user and project context",
   "keywords": [],
