--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
+    "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "clsx": "^1.2.1",
     "formik": "^2.2.9",
@@ -18,6 +19,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-loadable": "^5.4.0",
+    "react-redux": "^8.0.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-testing-library": "^4.1.2",
