fileview to etlunit

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 PORT=3007
-REACT_APP_DEBUG_DASHBOARD='true'
-
-
 REACT_APP_DRIVE_AUTH_URL='http://localhost:3099/drive'
+REACT_APP_DEBUG_DASHBOARD='true'
+REACT_APP_DEBUG_SAGAS_ACTIONS='false'
+REACT_APP_TURN_SAVE_FEATURE_ON='true'
+REACT_APP_DEBUG_MACHINE='false'
 
+REACT_APP_DEBUG_API='true'
+REACT_APP_DEBUG_MIDDLEWARE='true'
