--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@reduxjs/toolkit": "^1.8.3",
     "@types/react": "^16.8.19",
     "@welldone-software/why-did-you-render": "^4.3.2",
-    "@xstate/react": "^1.6.3",
+    "@xstate/react": "^3.0.1",
     "axios": "^0.27.2",
     "clsx": "^1.2.1",
     "formik": "^2.2.9",
@@ -36,11 +36,11 @@
     "notistack": "^2.0.5",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
-    "react": "^17.0.1",
+    "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-cosmos": "^5.7.2",
     "react-cosmos-redux": "^2.0.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^18.2.0",
     "react-error-boundary": "^2.3.1",
     "react-hook-form": "6.15.7",
     "react-loadable": "^5.4.0",
@@ -49,14 +49,14 @@
     "react-scripts": "5.0.1",
     "react-split-pane": "^0.1.92",
     "react-testing-library": "^4.1.2",
-    "redux": "^4.1.2",
+    "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "1.1.1",
     "sass": "^1.51.0",
     "styled-components": "^4.3.2",
     "typescript": "^4.7.4",
     "use-query-params": "^1.2.3",
-    "xstate": "^4.28.0",
+    "xstate": "^4.33.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -77,6 +77,7 @@
     "eslint-plugin-material-ui": "^1.0.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-redux-saga": "^1.3.2",
     "flow-bin": "^0.129.0",
     "inquirer": "^6.0.0",
     "is-ci": "^1.1.0",
