--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "1.1.1",
     "sass": "^1.51.0",
+    "split-pane-react": "^0.0.1",
     "styled-components": "^4.3.2",
     "typescript": "^4.7.4",
     "use-query-params": "^1.2.3",
