--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ REACT_APP_DEBUG_MACHINE='false'
 
 REACT_APP_DEBUG_API='true'
 REACT_APP_DEBUG_MIDDLEWARE='true'
+REACT_APP_SAVE_MATRIX_ENDPOINT='http://localhost:5005/v1/matrix/export'
+
