--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "@dnd-kit/utilities": "^2.0.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@hello-pangea/dnd": "^16.0.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
     "@mui/styles": "^5.6.2",
     "@mui/system": "^5.9.2",
-    "@mui/x-data-grid-pro": "^5.9.0",
+    "@mui/x-data-grid-pro": "^5.17.0",
     "@openfonts/lato_latin": "^1.44.1",
     "@openfonts/raleway_latin": "^1.44.1",
     "@openfonts/rubik_latin": "^1.44.1",
@@ -28,7 +29,7 @@
     "formik": "^2.2.9",
     "hoist-non-react-statics": "^2.5.5",
     "http-proxy-middleware": "^2.0.6",
-    "idb-keyval": "^5.0.6",
+    "idb-keyval": "^6.2.0",
     "jest-dom": "^1.5.2",
     "lodash.curry": "^4.1.1",
     "lodash.isequal": "^4.5.0",
@@ -37,7 +38,6 @@
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.0",
     "react-cosmos": "^5.7.2",
     "react-cosmos-redux": "^2.0.0",
     "react-dom": "^18.2.0",
@@ -50,6 +50,7 @@
     "react-split-pane": "^0.1.92",
     "react-testing-library": "^4.1.2",
     "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-saga": "1.1.1",
     "sass": "^1.51.0",
@@ -57,7 +58,7 @@
     "styled-components": "^4.3.2",
     "typescript": "^4.7.4",
     "use-query-params": "^1.2.3",
-    "xstate": "^4.33.2",
+    "xstate": "^4.33.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
