ready for new shell

--- a/.env
+++ b/.env
@@ -1,11 +1,25 @@
 PORT=3007
-REACT_APP_DRIVE_AUTH_URL='http://localhost:3099/drive'
-REACT_APP_DEBUG_DASHBOARD='true'
-REACT_APP_DEBUG_SAGAS_ACTIONS='false'
-REACT_APP_TURN_SAVE_FEATURE_ON='true'
-REACT_APP_DEBUG_MACHINE='false'
 
+REACT_APP_DRIVE_AUTH_URL='http://localhost:3099/drive'
+REACT_APP_SAVE_MATRIX_ENDPOINT='http://localhost:5005/v1/matrix/{projectId}/csv'
+
+REACT_APP_AUTH_PROVIDERS='google,azure,github,twitter,discord'
+
+
+# Feature
+REACT_APP_TURN_SAVE_FEATURE_ON='true'
+
+# debugging toggles
+REACT_APP_DEBUG_DASHBOARD='true'
+REACT_APP_DEBUG_WORKBENCH='true'
+REACT_APP_DEBUG_ETL_FIELD_VIEW='true'
+
+REACT_APP_DEBUG_SAGAS_ACTIONS='false'
+REACT_APP_DEBUG_MACHINE='false'
 REACT_APP_DEBUG_API='true'
 REACT_APP_DEBUG_MIDDLEWARE='true'
-REACT_APP_SAVE_MATRIX_ENDPOINT='http://localhost:5005/v1/matrix/export'
+
+REACT_APP_DEBUG_WHY_DID_YOU_RENDER='false'
+
+REACT_APP_DEFAULT_VALUE_GRID_PAGE_SIZE=90
 
