--- a/package.json
+++ b/package.json
@@ -47,15 +47,18 @@
     "react-hook-form": "6.15.7",
     "react-json-view": "^1.21.3",
     "react-loadable": "^5.4.0",
+    "react-markdown": "^8.0.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-sizeme": "^3.0.2",
     "react-split-pane": "^0.1.92",
+    "react-syntax-highlighter": "^15.5.0",
     "react-testing-library": "^4.1.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "1.1.1",
+    "remark-gfm": "^3.0.1",
     "sass": "^1.51.0",
     "split-pane-react": "^0.0.1",
     "styled-components": "^4.3.2",
