--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ REACT_APP_TURN_SAVE_FEATURE_ON='true'
 
 # debugging toggles
 REACT_APP_DEBUG_DASHBOARD='false'
+REACT_APP_DEBUG_HEADER_VIEWS='false'
 REACT_APP_DEBUG_WORKBENCH='false'
 REACT_APP_DEBUG_THEME='false'
 REACT_APP_DEBUG_ETL_FIELD_VIEW='false'
