--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "cosmos:export": "cosmos-export"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": ["react-app"]
   },
   "browserslist": {
     "development": [
