--- a/.env-prod
+++ b/.env-prod
@@ -3,9 +3,9 @@ PORT=3007
 REACT_APP_USER_AUTH_PROVIDERS='google,azure,github,twitter,discord'
 
 # Production
-REACT_APP_SAVE_MATRIX_ENDPOINT='tnc-py-service:5005/v1/matrix/{projectId}/csv'
-REACT_APP_USER_AUTH_URL='auth-service:3099/auth'
-REACT_APP_DRIVE_AUTH_URL='auth-service:3099/drive'
+REACT_APP_SAVE_MATRIX_ENDPOINT='http://tnc-py-service:5005/v1/matrix/{projectId}/csv'
+REACT_APP_USER_AUTH_URL='https://auth-service:3099/auth'
+REACT_APP_DRIVE_AUTH_URL='https://auth-service:3099/drive'
 
 # Feature
 REACT_APP_TURN_SAVE_FEATURE_ON='true'
