--- a/.github/workflows/docker-compose-image.yml
+++ b/.github/workflows/docker-compose-image.yml
@@ -33,5 +33,5 @@ jobs:
 
       run: |
           LATEST=ghcr.io/lucivia/frontend:compose
-          docker build . --file Dockerfile-compose --tag $LATEST
+          docker build . --file Dockerfile.compose --tag $LATEST
           docker push $LATEST
