--- a/.env-kube
+++ b/.env-kube
@@ -3,9 +3,9 @@ PORT=3007
 REACT_APP_USER_AUTH_PROVIDERS='google,azure,github,twitter,discord'
 
 # docker-compose
-REACT_APP_SAVE_MATRIX_ENDPOINT='http:tnc-py-service/v1/matrix/{projectId}/csv'
-REACT_APP_USER_AUTH_URL='https:lucivia.net:3099/auth'
-REACT_APP_DRIVE_AUTH_URL='https:lucivia.net:3099/drive'
+REACT_APP_SAVE_MATRIX_ENDPOINT='http://tnc-py-service:5005/v1/matrix/{projectId}/csv'
+REACT_APP_USER_AUTH_URL='https://www.lucivia.net:3099/auth'
+REACT_APP_DRIVE_AUTH_URL='https://www.lucivia.net:3099/drive'
 
 # Feature
 REACT_APP_TURN_SAVE_FEATURE_ON='true'
