workbench max tries

--- a/.env-compose
+++ b/.env-compose
@@ -1,5 +1,9 @@
 PORT=3007
 
+# api calls
+REACT_APP_WAREHOUSE_MAX_TRIES=30
+REACT_APP_MATRIX_MAX_TRIES=30
+
 REACT_APP_USER_AUTH_PROVIDERS='google,azure,github,twitter,discord'
 
 # docker-compose
