--- a/.env-kube
+++ b/.env-kube
@@ -1,6 +1,7 @@
 PORT=3007
 
 # api calls
+REACT_APP_WORKBENCH_MAX_TRIES=30
 REACT_APP_MATRIX_MAX_TRIES=30
 
 REACT_APP_USER_AUTH_PROVIDERS='google,azure,github,twitter,discord'
