--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "hoist-non-react-statics": "^2.5.5",
     "http-proxy-middleware": "^2.0.6",
     "idb-keyval": "^6.2.0",
+    "invariant": "^2.2.4",
     "jest-dom": "^1.5.2",
     "lodash.curry": "^4.1.1",
     "lodash.isequal": "^4.5.0",
