--- a/.env-compose
+++ b/.env-compose
@@ -11,6 +11,9 @@ REACT_APP_SAVE_MATRIX_ENDPOINT='http://localhost:5005/v1/matrix/{projectId}/csv'
 REACT_APP_USER_AUTH_URL='http://localhost:3099/auth'
 REACT_APP_DRIVE_AUTH_URL='http://localhost:3099/drive'
 
+# feedback settings
+REACT_APP_FEEDBACK_META='mock,testing'
+
 # Feature
 REACT_APP_TURN_SAVE_FEATURE_ON='true'
 
