--- a/.env-kube
+++ b/.env-kube
@@ -11,6 +11,9 @@ REACT_APP_SAVE_MATRIX_ENDPOINT='https://www.lucivia.net/v1/matrix/{projectId}/cs
 REACT_APP_USER_AUTH_URL='https://www.lucivia.net/auth/auth'
 REACT_APP_DRIVE_AUTH_URL='https://www.lucivia.net/auth/drive'
 
+# feedback settings
+REACT_APP_FEEDBACK_META='feedback,generic'
+
 # Feature
 REACT_APP_TURN_SAVE_FEATURE_ON='true'
 
