--- a/.env-kube
+++ b/.env-kube
@@ -6,8 +6,11 @@ REACT_APP_MATRIX_MAX_TRIES=30
 
 REACT_APP_USER_AUTH_PROVIDERS='google,azure,github,twitter,discord'
 
+# Links to artifacts (matrix to be deprecated)
+REACT_APP_SAVE_MATRIX_ENDPOINT=https://www.lucivia.net/v1/matrix/{projectId}/csv
+REACT_APP_META_ARTIFACT_ENDPOINT=https://www.lucivia.net/v1/meta/{projectId}/{filename}
+
 # kube settings
-REACT_APP_SAVE_MATRIX_ENDPOINT='https://www.lucivia.net/v1/matrix/{projectId}/csv'
 REACT_APP_USER_AUTH_URL='https://www.lucivia.net/auth/auth'
 REACT_APP_DRIVE_AUTH_URL='https://www.lucivia.net/auth/drive'
 
