--- a/.env
+++ b/.env
@@ -6,8 +6,11 @@ REACT_APP_MATRIX_MAX_TRIES=30
 
 REACT_APP_USER_AUTH_PROVIDERS='google,azure,github,twitter,discord'
 
+# Links to artifacts (matrix to be deprecated)
+REACT_APP_SAVE_MATRIX_ENDPOINT=http://localhost:5005/v1/matrix/{projectId}/csv
+REACT_APP_META_ARTIFACT_ENDPOINT=http://localhost:5005/v1/meta/{projectId}/{filename}
+
 # Development
-REACT_APP_SAVE_MATRIX_ENDPOINT='http://localhost:5005/v1/matrix/{projectId}/csv'
 REACT_APP_USER_AUTH_URL='http://localhost:3099/auth'
 REACT_APP_DRIVE_AUTH_URL='http://localhost:3099/drive'
 
