--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "LuciApp",
   "version": "0.3.10",
   "description": "Luci ready data and analysis platform",
-  "keywords": [],
+  "keywords": ["data", "processing", "analysis", "test-and-control"],
   "main": "src/index.js",
   "private": true,
   "dependencies": {
@@ -23,7 +23,7 @@
     "@redux-devtools/extension": "^3.2.3",
     "@reduxjs/toolkit": "^1.8.3",
     "@types/react": "^16.8.19",
-    "@welldone-software/why-did-you-render": "^4.3.2",
+    "@welldone-software/why-did-you-render": "^7.0.1",
     "@xstate/react": "^3.0.1",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.27.2",
@@ -33,7 +33,6 @@
     "http-proxy-middleware": "^2.0.6",
     "idb-keyval": "^6.2.0",
     "invariant": "^2.2.4",
-    "jest-dom": "^1.5.2",
     "lodash.curry": "^4.1.1",
     "lodash.isequal": "^4.5.0",
     "moment": "^2.29.4",
@@ -46,7 +45,7 @@
     "react-cosmos-redux": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^2.3.1",
-    "react-hook-form": "6.15.7",
+    "react-hook-form": "^6.15.7",
     "react-json-view": "^1.21.3",
     "react-loadable": "^5.4.0",
     "react-markdown": "^8.0.3",
@@ -56,7 +55,6 @@
     "react-sizeme": "^3.0.2",
     "react-split-pane": "^0.1.92",
     "react-syntax-highlighter": "^15.5.0",
-    "react-testing-library": "^4.1.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "1.1.1",
@@ -70,14 +68,11 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^8.0.1",
     "all-contributors-cli": "^5.2.1",
     "better-docs": "^2.3.2",
     "classnames": "^2.3.1",
     "cross-spawn": "^6.0.5",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.9.1",
     "eslint": "^8.6.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -101,7 +96,7 @@
   "scripts": {
     "build": "react-scripts build",
     "docs": "./node_modules/.bin/jsdoc -c ./jsdoc.json",
-    "format": "prettier --config ./.prettierrc --write '**/*.{js|jsx}'",
+    "format": "prettier --config ./.prettierrc.json --write '**/*.{js|jsx}'",
     "setup": "node ./scripts/verify && node ./scripts/install && npm run validate && node ./scripts/autofill-feedback-email.js",
     "start": "react-scripts start --no-cache",
     "test": "react-scripts test --env=jsdom",
