--- a/Dockerfile.kube
+++ b/Dockerfile.kube
@@ -10,7 +10,7 @@ FROM node:18.10-alpine3.15 as react-build
 COPY package.json /frontend/package.json
 COPY yarn.lock /frontend/yarn.lock
 WORKDIR /frontend
-RUN  yarn install --verbose
+RUN  yarn install --silent
 
 # Stage 2 build app
 COPY public /frontend/public
