--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@emotion/styled": "^11.9.3",
     "@hello-pangea/dnd": "^16.0.0",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.1",
+    "@mui/material": "^5.14.10",
     "@mui/styles": "^5.6.2",
     "@mui/system": "^5.9.2",
     "@mui/x-data-grid-pro": "^5.17.0",
@@ -28,6 +28,13 @@
     "@redux-devtools/extension": "^3.2.3",
     "@reduxjs/toolkit": "^1.8.3",
     "@types/react": "^16.8.19",
+    "@uppy/core": "^3.5",
+    "@uppy/dashboard": "^3.5",
+    "@uppy/drag-drop": "^3.0",
+    "@uppy/file-input": "^3.0",
+    "@uppy/progress-bar": "^3.0",
+    "@uppy/react": "^3.1.3",
+    "@uppy/xhr-upload": "^3.5",
     "@welldone-software/why-did-you-render": "^7.0.1",
     "@xstate/react": "^3.0.1",
     "autosuggest-highlight": "^3.1.1",
