--- a/.env
+++ b/.env
@@ -17,6 +17,7 @@ REACT_APP_META_ARTIFACT_ENDPOINT=http://localhost:5005/v1/meta/{projectId}/{file
 # Development
 REACT_APP_USER_AUTH_URL='http://localhost:3099/auth'
 REACT_APP_DRIVE_AUTH_URL='http://localhost:3099/drive'
+REACT_APP_LUCI_DRIVE_URL='https://www.lucivia.net/v1/upload'
 
 # feedback settings
 REACT_APP_FEEDBACK_META='mock,testing'
