--- a/.env-kube
+++ b/.env-kube
@@ -17,6 +17,7 @@ REACT_APP_META_ARTIFACT_ENDPOINT=https://www.lucivia.net/v1/meta/{projectId}/{fi
 # kube settings
 REACT_APP_USER_AUTH_URL='https://www.lucivia.net/auth/auth'
 REACT_APP_DRIVE_AUTH_URL='https://www.lucivia.net/auth/drive'
+REACT_APP_LUCI_DRIVE_URL='https://www.lucivia.net/v1/upload'
 
 # feedback settings
 REACT_APP_FEEDBACK_META='feedback,generic'
