--- a/package.json
+++ b/package.json
@@ -11,31 +11,21 @@
   "main": "src/index.js",
   "private": true,
   "dependencies": {
-    "@dnd-kit/core": "^3.0.1",
-    "@dnd-kit/sortable": "^3.0.1",
-    "@dnd-kit/utilities": "^2.0.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@hello-pangea/dnd": "^16.0.0",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.14.10",
-    "@mui/styles": "^5.6.2",
+    "@mui/material": "file:mui-material-5.14.11.tgz",
     "@mui/system": "^5.9.2",
     "@mui/x-data-grid-pro": "^5.17.0",
-    "@openfonts/lato_latin": "^1.44.1",
-    "@openfonts/raleway_latin": "^1.44.1",
-    "@openfonts/rubik_latin": "^1.44.1",
     "@redux-devtools/extension": "^3.2.3",
     "@reduxjs/toolkit": "^1.8.3",
     "@types/react": "^16.8.19",
     "@welldone-software/why-did-you-render": "^7.0.1",
     "@xstate/react": "^3.0.1",
-    "autosuggest-highlight": "^3.1.1",
     "axios": "^0.27.2",
     "clsx": "^1.2.1",
     "formik": "^2.2.9",
-    "hoist-non-react-statics": "^2.5.5",
-    "http-proxy-middleware": "^2.0.6",
     "idb-keyval": "^6.2.0",
     "invariant": "^2.2.4",
     "lodash.curry": "^4.1.1",
@@ -45,39 +35,29 @@
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-autosuggest": "^10.0.2",
     "react-cosmos": "^5.7.2",
     "react-cosmos-redux": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^2.3.1",
     "react-hook-form": "^6.15.7",
     "react-json-view": "^1.21.3",
-    "react-loadable": "^5.4.0",
     "react-markdown": "^8.0.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-sizeme": "^3.0.2",
     "react-split-pane": "^0.1.92",
-    "react-syntax-highlighter": "^15.5.0",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "1.1.1",
     "remark-gfm": "^3.0.1",
-    "sass": "^1.51.0",
-    "split-pane-react": "^0.0.1",
-    "styled-components": "^4.3.2",
     "typescript": "^4.7.4",
-    "use-query-params": "^1.2.3",
     "xstate": "^4.33.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/react": "^8.0.1",
-    "all-contributors-cli": "^5.2.1",
-    "better-docs": "^2.3.2",
-    "classnames": "^2.3.1",
     "cross-spawn": "^6.0.5",
     "eslint": "^8.6.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -88,7 +68,6 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-redux-saga": "^1.3.2",
-    "flow-bin": "^0.129.0",
     "inquirer": "^6.0.0",
     "is-ci": "^1.1.0",
     "jsdoc": "^3.6.4",
