updated env-compose api

--- a/.env
+++ b/.env
@@ -1,23 +1,26 @@
+# Usage: Be sure to cp .env-compose to .env for local dev.
+# This copy occurs in the Dockerfile when containerized.
 # version
 REACT_APP_NAME=$npm_package_name
 REACT_APP_VERSION=$npm_package_version
 
-PORT=3007
+# Dev port
+PORT=3017
 
 # api calls
 REACT_APP_WAREHOUSE_MAX_TRIES=30
 REACT_APP_MATRIX_MAX_TRIES=30
 
-REACT_APP_USER_AUTH_PROVIDERS='google,azure,github,twitter,discord'
+REACT_APP_USER_AUTH_PROVIDERS='google,azure,github,discord'
 
 # Links to artifacts (matrix to be deprecated)
-REACT_APP_SAVE_MATRIX_ENDPOINT=http://localhost:5005/v1/matrix/{projectId}/csv
-REACT_APP_META_ARTIFACT_ENDPOINT=http://localhost:5005/v1/meta/{projectId}/{filename}
+REACT_APP_SAVE_MATRIX_ENDPOINT=https://local.lucivia.net/v1/matrix/{projectId}/csv
+REACT_APP_META_ARTIFACT_ENDPOINT=https://local.lucivia.net/v1/meta/{projectId}/{filename}
 
-# Development
-REACT_APP_USER_AUTH_URL='http://localhost:3099/auth'
-REACT_APP_DRIVE_AUTH_URL='http://localhost:3099/drive'
-REACT_APP_LUCI_DRIVE_URL='https://www.lucivia.net/v1/upload'
+# local settings
+REACT_APP_USER_AUTH_URL='https://local.lucivia.net/auth/auth'
+REACT_APP_DRIVE_AUTH_URL='https://local.lucivia.net/auth/drive'
+REACT_APP_LUCI_DRIVE_URL='https://local.lucivia.net/v1/upload'
 
 # feedback settings
 REACT_APP_FEEDBACK_META='mock,testing'
