--- a/.env-kube
+++ b/.env-kube
@@ -2,7 +2,8 @@
 REACT_APP_NAME=$npm_package_name
 REACT_APP_VERSION=$npm_package_version
 
-PORT=3007
+# Dev port
+PORT=3017
 
 # api calls
 REACT_APP_WORKBENCH_MAX_TRIES=30
