--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "LuciApp",
-  "version": "0.3.10",
+  "version": "0.3.11",
   "description": "Luci ready data and analysis platform",
   "keywords": [
     "data",
@@ -90,7 +90,8 @@
     "validate": "npm-run-all --parallel build test:coverage",
     "view-docs": "yarn docs && cd docs &&  open http://localhost:8000 && python -m SimpleHTTPServer",
     "cosmos": "cosmos",
-    "cosmos:export": "cosmos-export"
+    "cosmos:export": "cosmos-export",
+    "postinstall": "patch-package"
   },
   "browserslist": {
     "development": [
