--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "moment": "^2.29.4",
     "notistack": "^2.0.5",
     "numeral": "^2.0.6",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-cosmos": "^5.7.2",
-    "react-cosmos-redux": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^2.3.1",
     "react-hook-form": "^6.15.7",
@@ -76,6 +76,9 @@
     "prettier": "^2.7.1",
     "prettier-eslint": "^13.0.0",
     "prettier-eslint-cli": "^5.0.1",
+    "react-cosmos": "^6.0.3",
+    "react-cosmos-plugin-webpack": "^6.0.3",
+    "react-cosmos-redux": "^2.0.0",
     "replace-in-file": "^3.4.0"
   },
   "scripts": {
@@ -90,7 +93,8 @@
     "validate": "npm-run-all --parallel build test:coverage",
     "view-docs": "yarn docs && cd docs &&  open http://localhost:8000 && python -m SimpleHTTPServer",
     "cosmos": "cosmos",
-    "cosmos:export": "cosmos-export"
+    "cosmos:export": "cosmos-export",
+    "postinstall": "patch-package"
   },
   "browserslist": {
     "development": [
