--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@xstate/react": "^3.0.1",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "formik": "^2.2.9",
     "idb-keyval": "^6.2.0",
     "invariant": "^2.2.4",
@@ -74,6 +75,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-redux-saga": "^1.3.2",
+    "eslint-plugin-you-dont-need-momentjs": "^1.6.0",
     "inquirer": "^6.0.0",
     "is-ci": "^1.1.0",
     "jest": "^29.7.0",
