--- a/.env-kube
+++ b/.env-kube
@@ -29,9 +29,10 @@ REACT_APP_TURN_SAVE_FEATURE_ON='true'
 # debugging toggles
 REACT_APP_DEBUG_DASHBOARD='false'
 REACT_APP_DEBUG_HEADER_VIEWS='false'
-REACT_APP_DEBUG_WORKBENCH='false'
-REACT_APP_DEBUG_THEME='false'
 REACT_APP_DEBUG_ETL_FIELD_VIEW='false'
+REACT_APP_DEBUG_WORKBENCH='false'
+REACT_APP_DEBUG_MATRIX='false'
+REACT_APP_DEBUG_THEME='false'
 REACT_APP_DEBUG_LEVELS='false'
 REACT_APP_DEBUG_STEP_BAR='false'
 REACT_APP_DEBUG_LOGIN='false'
@@ -45,6 +46,6 @@ REACT_APP_DEBUG_GQL='false'
 
 REACT_APP_DEBUG_WHY_DID_YOU_RENDER='false'
 
-REACT_APP_DEFAULT_VALUE_GRID_PAGE_SIZE=500
+REACT_APP_DEFAULT_VALUE_GRID_PAGE_SIZE=2000
 
 # END
