--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "LuciApp",
-  "version": "0.3.11",
+  "version": "0.4.0",
   "description": "Luci ready data and analysis platform",
   "keywords": [
     "data",
     "processing",
+    "data-visualization",
     "analysis",
     "test-and-control"
   ],
