--- a/.env
+++ b/.env
@@ -48,7 +48,7 @@ REACT_APP_DEBUG_LOGIN='false'
 REACT_APP_DEBUG_MODAL='false'
 
 REACT_APP_DEBUG_SAGAS_ACTIONS='false'
-REACT_APP_DEBUG_MACHINE='false'
+REACT_APP_DEBUG_MACHINE='true'
 REACT_APP_DEBUG_API='false'
 REACT_APP_DEBUG_MIDDLEWARE='false'
 REACT_APP_DEBUG_GQL='false'
