--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "LuciApp",
-  "version": "0.4.0",
+  "version": "0.5.1",
   "description": "Luci ready data and analysis platform",
   "keywords": [
     "data",
@@ -77,6 +77,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-redux-saga": "^1.3.2",
     "eslint-plugin-you-dont-need-momentjs": "^1.6.0",
+    "flow-bin": "^0.238.3",
     "inquirer": "^6.0.0",
     "is-ci": "^1.1.0",
     "jest": "^29.7.0",
