--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "1.3.0",
     "remark-gfm": "^4.0.0",
+    "reselect": "^5.1.1",
     "simple-statistics": "^7.8.3",
     "web-vitals": "^3.5.2",
     "xstate": "^4.33.4",
