--- a/.env-kube
+++ b/.env-kube
@@ -1,3 +1,4 @@
+# This copy occurs in the Dockerfile when containerized.
 # version
 REACT_APP_NAME=$npm_package_name
 REACT_APP_VERSION=$npm_package_version
@@ -47,5 +48,6 @@ REACT_APP_DEBUG_GQL='false'
 REACT_APP_DEBUG_WHY_DID_YOU_RENDER='false'
 
 REACT_APP_DEFAULT_VALUE_GRID_PAGE_SIZE=2000
+
 
 # END
