--- a/.env-kube
+++ b/.env-kube
@@ -28,6 +28,7 @@ REACT_APP_FEEDBACK_META='feedback,generic'
 REACT_APP_TURN_SAVE_FEATURE_ON='true'
 
 # debugging toggles
+REACT_APP_DEBUG_TOOLS='true'
 REACT_APP_DEBUG_DASHBOARD='false'
 REACT_APP_DEBUG_HEADER_VIEWS='false'
 REACT_APP_DEBUG_ETL_FIELD_VIEW='false'
