--- a/.env-kube
+++ b/.env-kube
@@ -36,9 +36,11 @@ REACT_APP_DEBUG_WORKBENCH='false'
 REACT_APP_DEBUG_MATRIX='false'
 REACT_APP_DEBUG_THEME='false'
 REACT_APP_DEBUG_LEVELS='false'
+REACT_APP_DEBUG_SPAN_LEVELS === 'true';
 REACT_APP_DEBUG_STEP_BAR='false'
 REACT_APP_DEBUG_LOGIN='false'
 REACT_APP_DEBUG_MODAL='false'
+
 
 REACT_APP_DEBUG_SAGAS_ACTIONS='false'
 REACT_APP_DEBUG_MACHINE='false'
